mds: defer trim() until after the last cache_rejoin ack being received

Just before the last cache_rejoin ack being received the entire
subtree, together with the inode subtree root belongs to, were
trimmed the isolated_inodes list couldn't be correctly erased. We
should defer calling the trim() until the last cache_rejoin ack
being received.

Fixes: https://tracker.ceph.com/issues/62036
Signed-off-by: Xiubo Li <xiubli@redhat.com>